--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "The front end code audition for ILM Professional Services",
   "scripts": {
     "start": "node serve.js",
+    "test": "mocha --require test/setup.js",
     "dev": "nodemon server.js"
   },
   "repository": {
@@ -18,7 +19,10 @@
   "main": "serve.js",
   "devDependencies": {
     "bootstrap": "4.3.1",
-    "nodemon": "^1.19.4"
+    "chai": "^4.2.0",
+    "mocha": "^6.2.2",
+    "nodemon": "^1.19.4",
+    "supertest": "^4.0.2"
   },
   "dependencies": {
     "express": "^4.16.4"
