--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   },
   "dependencies": {
     "bootstrap": "4.3.1",
+    "cors": "^2.8.5",
     "cuid": "^2.1.6",
     "ejs": "^2.7.2",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "rxjs": "^6.5.3"
   }
 }
